--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -67,6 +67,7 @@
   &__details {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     padding: 7.5rem 8rem 3.5rem 8rem;
   }
 
